part one work updated

--- a/gutenberg/2.html
+++ b/gutenberg/2.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0054)https://www.gutenberg.org/files/2852/2852-h/2852-h.htm -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
-<link href="style.css" rel="stylesheet">
+<link rel="stylesheet" href="style.css">
 
 <meta http-equiv="Content-Style-Type" content="text/css">
 <title>The Project Gutenberg eBook of The Hound of the Baskervilles, by Arthur Conan Doyle</title>
